fix: change to coming soon on mobile

--- a/src/styles/Register.module.scss
+++ b/src/styles/Register.module.scss
@@ -651,6 +651,7 @@ label{
   transform: translateX(-50%);
   left: 50%;
   text-transform: uppercase;
+  text-align: center;
 }
 .successText::after{
   content: "";
